fix side bar overlap calendar layout

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -17,6 +17,7 @@ main {
 .container {
 	display: flex;
 	overflow: hidden;
+	padding-left: 30px;
 }
 
 /* Calendar container */
